--- a/index.html
+++ b/index.html
@@ -43,32 +43,38 @@
       </div>
     </div>
     <section id="banner">
-      <div class="container">
+      <div class="container delivery">
         <div class="banner-info">
           <h3>Your <span>Food</span> court at home</h3>
-          <div>
-            <button>Delivery Order in</button>
-            <button>Takeout Grab and go</button>
+          <div class = "shipping"> 
+            <div class="btn">
+              <b>Delivery</b>
+              <p>Order in </p>
+            </div>
+            <div class="btn">
+              <b>Takeout</b>
+              <p>Grab and go</p>
+            </div>
           </div>
         </div>
         <div class="img-banner">
           <img src="./image/banner.png" alt="" />
         </div>
       </div>
-      <!-- <div class="police-info">
-        <div>
-          <img src="" alt="" />
-          <p>delivery in all paris in less than 30 minutes</p>
+      <div class="police-info">
+        <div class ="content">
+          <img src="./image/Page 1.png" alt="" />
+          <p>delivery in all paris in less than 30 minutes</p>
         </div>
-        <div>
-          <img src="" alt="" />
-          <p>Free delivery from 29 euros</p>
+        <div class="content">
+          <img src="./image/delivery.png" alt="" />
+          <p>Free delivery from 29 euros</p>
         </div>
-        <div>
-          <img src="" alt="" />
-          <p>Only fresh and French products</p>
+        <div class="content">
+          <img src="./image/x30 HS9J6 1.png" alt="" />
+          <p>Only fresh and French products</p>
         </div>
-      </div> -->
+      </div>
     </section>
     <script type="module" src="./food_data.js"></script>
     <script type="module" src="./script.js"></script>
