--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <img src="./image/banner.png" alt="" />
         </div>
       </div>
-      <div class="police-info">
+      <div class="police-info shadow-sm p-3 mb-5 bg-body-tertiary rounded">
         <div class ="content">
           <img src="./image/Page 1.png" alt="" />
           <p>delivery in all paris in less than 30 minutes</p>
