--- a/index.html
+++ b/index.html
@@ -83,5 +83,31 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <section>
+      <div class="heading">
+      <h1>
+        Restaurants
+      </h1>
+      <button>show all</button>
+    </div>
+      <div class = "foods">
+      <div class="burger">
+        <img src="image/Photo-base.png" alt="">
+        <img src="image/Group 29.png" alt="">
+      </div>
+      <div class="burger">
+        <img src="image/rice.png" alt="">
+        <img src="image/il_paster.png" alt="">
+      </div>
+      <div class="burger">
+        <img src="image/chicken.png" alt="">
+        <img src="image/Believe.png" alt="">
+      </div>
+      <div class="burger">
+        <img src="image/comvietnam.png" alt="">
+        <img src="image/vietnamese.png" alt="">
+      </div>
+    </div>
+    </section>
   </body>
 </html>
