--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <h1>
         Restaurants
       </h1>
-      <button>show all</button>
+      <button>More</button>
     </div>
       <div class = "foods">
       <div class="burger">
