--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -193,6 +194,18 @@
           <div class="swiper-button-next"></div>
         </div>
       </div>
+    </section>
+    <section class ="address">
+      <div class="container">
+      <h2>
+        Your nearest restaurants
+      </h2>
+      <p>Each kitchen works with its own delivery area to deliver food to you as soon as possible</p>
+    </div>
+    <div class="search-bar">
+      <input type="text" placeholder="Enter delivery address">
+    </div>
+    <button class="send">send</button>
     </section>
   </body>
 </html>
