--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -195,17 +195,36 @@
         </div>
       </div>
     </section>
-    <section class ="address">
-      <div class="container">
-      <h2>
-        Your nearest restaurants
-      </h2>
-      <p>Each kitchen works with its own delivery area to deliver food to you as soon as possible</p>
-    </div>
-    <div class="search-bar">
-      <input type="text" placeholder="Enter delivery address">
-    </div>
-    <button class="send">send</button>
+    <section class="address">
+      <div class="container wrap-address">
+        <div>
+          <h2>Your nearest restaurants</h2>
+          <p>
+            Each kitchen works with its own delivery area to deliver food to you
+            as soon as possible
+          </p>
+        </div>
+        <div class="wrap-search">
+          <div class="search-bar">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M12.0001 21.58L6.34006 15.92C3.22006 12.8 3.22006 7.73002 6.34006 4.61002C7.90006 3.05002 9.95006 2.27002 12.0001 2.27002C14.0501 2.27002 16.1001 3.05002 17.6601 4.61002C20.7801 7.73002 20.7801 12.8 17.6601 15.92L12.0001 21.58ZM12 13C13.6569 13 15 11.6568 15 9.99997C15 8.34311 13.6569 6.99997 12 6.99997C10.3432 6.99997 9.00003 8.34311 9.00003 9.99997C9.00003 11.6568 10.3432 13 12 13Z"
+                fill="#D4D7E6"
+              />
+            </svg>
+            <input type="text" placeholder="Enter delivery address" />
+          </div>
+          <button class="send">send</button>
+        </div>
+      </div>
     </section>
   </body>
 </html>
